Test/git-issues/git-issue-2068.dfy.expect
git-issue-2068.dfy(4,42): Error: type int does not have a member i
git-issue-2068.dfy(4,44): Error: there is no enclosing type that 'this' can refer to
2 resolution/type errors detected in git-issue-2068.dfy
